Add misk-redis support for SCAN operation (#3345)
* Add misk-redis support for SCAN operation

* Edit

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ wire = "4.9.3"
 [libraries]
 apacheCommonsLang = { module = "org.apache.commons:commons-lang3", version = "3.11" }
 apacheCommonsPool = { module = "org.apache.commons:commons-pool2", version = "2.11.1" }
+apacheCommonsIo = { module = "commons-io:commons-io", version = "2.16.1" }
 assertj = { module = "org.assertj:assertj-core", version = "3.25.3" }
 awaitility = { module = "org.awaitility:awaitility", version = "4.1.0" }
 awaitilityKotlin = { module = "org.awaitility:awaitility-kotlin", version = "4.1.0" }
