--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -45,7 +45,8 @@ jobs:
     strategy:
       matrix:
         cmd:
-          - gradle testShardHibernate -i --scan --no-parallel
+          - gradle testShardHibernate1 -i --scan --no-parallel
+          - gradle testShardHibernate2 -i --scan --no-parallel
           - gradle testShardRedis -i --scan --no-parallel
           - gradle testShardNonHibernate -i --scan --parallel
 
