Improve gradle test logging (#3361)
Co-authored-by: Andrew (Paradi) Alexander <adrw@squareup.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ org.gradle.caching=true
 org.gradle.vfs.watch=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+misk.test.logging=false
