Fix Misk OSS publishing
![Screenshot 2024-07-11 at 15 48
57](https://github.com/squareup/cash-server/assets/8827217/05671a9f-6e58-4ed3-b9fd-32dab083c96c)

This should fix a regression introduced in
https://github.com/cashapp/misk/pull/3361

Note the version in the logs is not on a new line so isn't parsed
correctly during the publish step.

GitOrigin-RevId: 367f11cd20d6b7f96195d74e7e33b56a0a798d98

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,5 @@ org.gradle.vfs.watch=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 misk.test.logging=false
+
+# Always ensure blank new line at end of file for setting the version during automated publishing
