Clean up the shard-splitting code
Instead of having hacky "hibernate1" and "hibernate2" groups inside
misk, unify them back into a single group. We can use gradle task
exclusion to run certain tasks in separate shards as needed.

GitOrigin-RevId: 8ad2c94fcf2c6529ff3f87f5daa8fdf153c96a73

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -45,8 +45,7 @@ jobs:
     strategy:
       matrix:
         cmd:
-          - gradle testShardHibernate1 -i --scan --no-parallel
-          - gradle testShardHibernate2 -i --scan --no-parallel
+          - gradle testShardHibernate -i --scan --no-parallel
           - gradle testShardRedis -i --scan --no-parallel
           - gradle testShardNonHibernate -i --scan --parallel
 
