Add Misk Multipart documentation
GitOrigin-RevId: e082ef434527c457dfc06094a6e8621e3ba62521

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
   - 'Overview': index.md
   - 'Getting Started': getting-started.md
   - 'Actions': actions.md
+  - 'Multipart Forms': multipart.md
   - 'Clients': clients.md
   - 'Testing': testing.md
   - '0.x API':
