Avoid injecting service instance during CoordinatedService.toString(). Add generic Provider<T> Json Moshi adapter.
GitOrigin-RevId: 8e45f85d70ff9cdc3aa9d5f97adb4d25da056ef0

--- a/detekt.yaml
+++ b/detekt.yaml
@@ -40,6 +40,8 @@ style:
       # Until moved to Guice 7, jakarta.inject.Provider causes issues with type overloads in Guice 6
       - value: 'jakarta.inject.Provider'
         reason: 'To be Guice 6 compliant, use `com.google.inject.Provider`'
+    excludes:
+      - '**/wisp/wisp-moshi/src/*/kotlin/wisp/moshi/ProviderJsonAdapter*.kt'
 
 detektive:
   active: true
