--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -169,6 +169,7 @@ mavenPublishGradlePlugin = { module = "com.vanniktech:gradle-maven-publish-plugi
 micrometerCore = { module = "io.micrometer:micrometer-core", version.ref = "micrometer" }
 micrometerRegistryPrometheus = { module = "io.micrometer:micrometer-registry-prometheus", version.ref = "micrometer" }
 mockitoCore = { module = "org.mockito:mockito-core", version = "5.14.1" }
+mockitoKotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "5.4.0" }
 moshiAdapters = { module = "com.squareup.moshi:moshi-adapters", version = "1.15.1" }
 moshiCore = { module = "com.squareup.moshi:moshi", version = "1.15.1" }
 moshiKotlin = { module = "com.squareup.moshi:moshi-kotlin", version = "1.15.1" }
