Add endpoint select dropdown and search for improved discoverability
GitOrigin-RevId: d901f99ef6c6f7f3b42c4d159732277f78bad737

--- a/misk-admin/web-actions/package.json
+++ b/misk-admin/web-actions/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "ace-builds": "^1.36.2"
+    "ace-builds": "^1.36.2",
+    "fuse.js": "^7.0.0",
+    "react-select": "^5.8.2"
   }
 }
