--- a/misk-admin/web-actions/package.json
+++ b/misk-admin/web-actions/package.json
@@ -15,15 +15,22 @@
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
+    "@eslint/js": "^9.13.0",
+    "@types/eslint__js": "^8.42.3",
     "babel-loader": "^9.2.1",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
     "file-loader": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "prettier": "3.3.3",
     "ts-jest": "^29.2.5",
     "ts-loader": "^8.4.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
