Add  CI checks to misk web-actions
GitOrigin-RevId: 7b0f7ab3060dacefce0e8f0076dd9d5fa4ca8891

--- a/misk-admin/web-actions/package.json
+++ b/misk-admin/web-actions/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "npx eslint src && npx prettier src --check",
+    "format": "npx prettier src --write"
   },
   "keywords": [],
   "author": "",
