Remove misk-console references. Replace module namespace with @web-actions
GitOrigin-RevId: 68e61a6e2fd2d9d39c7837021d421aaa88429cde

--- a/misk-admin/web-actions/tsconfig.json
+++ b/misk-admin/web-actions/tsconfig.json
@@ -21,7 +21,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@misk-console/*": ["src/misk-console/*"]
+      "@web-actions/*": ["src/web-actions/*"]
     },
     "downlevelIteration": true,
     "noImplicitAny": true,
