--- a/misk-admin/web-actions/package.json
+++ b/misk-admin/web-actions/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": " npx jest src",
     "build": "webpack",
     "lint": "npx eslint src && npx prettier src --check",
     "format": "npx prettier src --write"
@@ -19,6 +19,7 @@
     "@babel/preset-typescript": "^7.25.7",
     "@eslint/js": "^9.13.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/jest": "^29.5.14",
     "babel-loader": "^9.2.1",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
