--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -138,6 +138,7 @@ jgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version = "5.13.3.2024011
 jnrUnixsocket = { module = "com.github.jnr:jnr-unixsocket", version = "0.38.22" }
 jooq = { module = "org.jooq:jooq", version = "3.18.20" }
 jooqGradlePlugin = { module = "nu.studer:gradle-jooq-plugin", version = "9.0" }
+jsqlparser = { module = "com.github.jsqlparser:jsqlparser", version = "5.0"}
 junitApi = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junitEngine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junitParams = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
