Enable configuration caching
GitOrigin-RevId: 72d56daeb54ae3851c5d8748ad5a82e6663f61ff

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,11 @@
 org.gradle.jvmargs=-Xmx6g -XX:MaxMetaspaceSize=5g
 
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 org.gradle.vfs.watch=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+
 misk.test.logging=false
 
 # Always ensure blank new line at end of file for setting the version during automated publishing
