Publishing to Maven Central requires CC be disabled
GitOrigin-RevId: 22934c8a6996933eb08d667ffae7306b67e44756

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -97,7 +97,8 @@ jobs:
 
       - name: Publish the artifacts
         run: |
-          gradle clean publish --stacktrace
+          # disable configuration cache because publishing to Maven Central with CC is not supported yet
+          gradle clean publish --stacktrace --no-configuration-cache
 
       - name: Tag Misk repo
         uses: mathieudutour/github-tag-action@v6.1
