--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ aws2Core = { module = "software.amazon.awssdk:aws-core", version.ref = "aws2" }
 aws2Dynamodb = { module = "software.amazon.awssdk:dynamodb", version.ref = "aws2" }
 aws2DynamodbEnhanced = { module = "software.amazon.awssdk:dynamodb-enhanced", version.ref = "aws2" }
 aws2Regions = { module = "software.amazon.awssdk:regions" }
+aws2Sqs = { module = "software.amazon.awssdk:sqs", version.ref = "aws2" }
 awsCore = { module = "com.amazonaws:aws-java-sdk-core", version.ref = "aws1" }
 awsDynamodb = { module = "com.amazonaws:aws-java-sdk-dynamodb", version.ref = "aws1" }
 awsS3 = { module = "com.amazonaws:aws-java-sdk-s3", version.ref = "aws1" }
