--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ mavenPublish = "0.28.0"
 micrometer = "1.12.13"
 netty = "4.1.119.Final"
 okHttp = "5.0.0-alpha.14"
+okio = "3.10.2"
 protobuf = "3.25.6"
 retrofit = "2.11.0"
 sqldelight = "2.0.2"
@@ -173,7 +174,8 @@ nettyBom = { module = "io.netty:netty-bom", version.ref = "netty" }
 nettyHandler = { module = "io.netty:netty-handler", version.ref = "netty" }
 okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
 okHttpMockWebServer = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okHttp" }
-okio = { module = "com.squareup.okio:okio", version = "3.10.2" }
+okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
+okioFakefilesystem = { module = "com.squareup.okio:okio-fakefilesystem", version.ref = "okio" }
 openTracing = { module = "io.opentracing:opentracing-api", version = "0.33.0" }
 openTracingConcurrent = { module = "io.opentracing.contrib:opentracing-concurrent", version = "0.4.0" }
 openTracingDatadog = { module = "com.datadoghq:dd-trace-ot", version.ref = "datadog" }
