--- a/misk-admin/web-actions/package.json
+++ b/misk-admin/web-actions/package.json
@@ -7,7 +7,9 @@
     "test": " npx jest src",
     "build": "webpack",
     "lint": "npx eslint src && npx prettier src --check",
-    "format": "npx prettier src --write"
+    "format": "npx prettier src --write",
+    "proxy": "cd development-proxy && npm install && npm start",
+    "proxy:build": "cd development-proxy && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "@eslint/js": "^9.13.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
+    "@types/react-dom": "^18.0.0",
     "babel-loader": "^9.2.1",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
