Group actions by path, method & acton name for better navigate multiple endpoints per action
GitOrigin-RevId: 3ce215431cf67d4e4a62d2d3e06d46f93f30d33c

--- a/misk-admin/web-actions/package.json
+++ b/misk-admin/web-actions/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": " npx jest src",
     "build": "webpack",
+    "start": "webpack serve --mode development",
     "lint": "npx eslint src && npx prettier src --check",
     "format": "npx prettier src --write",
-    "proxy": "cd development-proxy && npm install && npm start",
-    "proxy:build": "cd development-proxy && npm install && npm run build"
+    "proxy": "cd development-proxy && npm install && npm run dev"
   },
   "keywords": [],
   "author": "",
