This PR open sources `VitessTestDb` in Misk via a new module `misk-vitess`
**VitessTestDb** enables developers to run their tests against a Vitess
environment that mimics staging and production. This enables validating
that queries work as expected in an environment that supports routing
queries to shards, a Vschema, and Vitess query types such as cross shard
queries, scatters, and lookups. VitessTestDb has been in use by Block
for years to run over 100,000 tests in CI daily across many apps.

**VitessTestDb** uses `Docker`, `vttestserver`, and `vtctldclient` to
simplify Vitess database operations such as container start-up, schema
change management, sequence table initialization, and table truncation.
Schema changes can be applied without requiring a time-consuming
container restart. It offers configuration knobs like the Vitess image
version, MySQL version, transaction isolation level, disabling scatter
queries, and more. It also offers Vschema linting and schema validation
to ensure that the schema is correct before starting the test
database.

GitOrigin-RevId: a82b575a883adf305b7c0804889de3a15e11b8a4

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -58,6 +58,7 @@ detektParser = { module = "io.gitlab.arturbosch.detekt:detekt-parser", version.r
 detektPsiUtils = { module = "io.gitlab.arturbosch.detekt:detekt-psi-utils", version.ref = "detekt" }
 detektTest = { module = "io.gitlab.arturbosch.detekt:detekt-test", version.ref = "detekt" }
 detektTestUtils = { module = "io.gitlab.arturbosch.detekt:detekt-test-utils", version.ref = "detekt" }
+docker = { module = "com.github.docker-java:docker-java", version.ref = "docker" }
 dockerApi = { module = "com.github.docker-java:docker-java-api", version.ref = "docker" }
 dockerCore = { module = "com.github.docker-java:docker-java-core", version.ref = "docker" }
 dockerTransportCore = { module = "com.github.docker-java:docker-java-transport", version.ref = "docker" }
@@ -170,6 +171,7 @@ moshiAdapters = { module = "com.squareup.moshi:moshi-adapters", version = "1.15.
 moshiCore = { module = "com.squareup.moshi:moshi", version = "1.15.2" }
 moshiKotlin = { module = "com.squareup.moshi:moshi-kotlin", version = "1.15.2" }
 mysql = { module = "com.mysql:mysql-connector-j", version = "8.4.0" }
+mysqlConnector = { module = "mysql:mysql-connector-java", version = "8.0.33" }
 nettyBom = { module = "io.netty:netty-bom", version.ref = "netty" }
 nettyHandler = { module = "io.netty:netty-handler", version.ref = "netty" }
 okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
