Setup redis service container for misk builds
GitOrigin-RevId: 013607bb8244c4b82f83acdbd12df62c72352cc2

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -41,6 +41,12 @@ jobs:
           - 3306:3306
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: 1
+      redis:
+        image: redis:7.2
+        ports:
+          - 6379:6379
+        options: >-
+          --loglevel debug
 
     strategy:
       matrix:
