--- a/misk-hibernate/src/test/resources/moviestestmodule-common.yaml
+++ b/misk-hibernate/src/test/resources/moviestestmodule-common.yaml
@@ -1,10 +1,11 @@
 vitess_mysql_data_source:
   type: VITESS_MYSQL
-  username: vt_app
-  password: whatever
-  vitess_schema_resource_root: classpath:/misk/hibernate/moviestestmodule-schema
+  username: root
+  password: ""
+  vitess_schema_resource_root: classpath:/vitess/schema
   generate_hibernate_stats: "true"
-  port: 27103
+  port: 27003
+  show_sql: "true"
 mysql_data_source:
   type: MYSQL
   database: movies
