Fix Misk CI Was breaking on unknown flag: --loglevel for newly added Redis Docker container
GitOrigin-RevId: 17737037154bf52b58c11ccfac663d847deb85f9

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -45,8 +45,9 @@ jobs:
         image: redis:7.2
         ports:
           - 6379:6379
-        options: >-
-          --loglevel debug
+# TODO: fix and re-enable, this was failing in CI with `unknown flag: --loglevel`
+#        options: >-
+#          --loglevel debug
 
     strategy:
       matrix:
