Update Misk CI pipelines
GitOrigin-RevId: 52307565e12af71752231ca17a208d665aebadd4

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -53,6 +53,11 @@ jobs:
       matrix:
         cmd:
           - gradle testShardHibernate -i --scan --no-parallel
+          - gradle testShardMiskAws -i --scan --no-parallel
+          - gradle testShardMiskJdbc -i --scan --no-parallel
+          - gradle testShardSchemaMigratorGradlePlugin -i --scan --no-parallel
+          - gradle testShardVitess -i --scan --no-parallel
+          - gradle testShardVitessGradlePlugin -i --scan --no-parallel
           - gradle testShardRedis -i --scan --no-parallel
           - gradle testShardNonHibernate -i --scan --parallel
 
