Separate the misk test shards in CI again
GitOrigin-RevId: 8c32cf523ef72e2194479637f3814a097d9de645

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -52,8 +52,15 @@ jobs:
     strategy:
       matrix:
         cmd:
-          - gradle -i --scan --no-parallel testShardHibernate testShardRedis
-          - gradle -i --scan               testShardMiskAws testShardMiskHibernate testShardMiskJdbc testShardSchemaMigratorGradlePlugin testShardVitess testShardVitessGradlePlugin testShardNonHibernate
+          - gradle -i --scan --no-parallel testShardHibernate
+          - gradle -i --scan               testShardMiskAws
+          - gradle -i --scan               testShardMiskHibernate
+          - gradle -i --scan               testShardMiskJdbc
+          - gradle -i --scan               testShardSchemaMigratorGradlePlugin
+          - gradle -i --scan --no-parallel testShardRedis
+          - gradle -i --scan               testShardVitess
+          - gradle -i --scan               testShardVitessGradlePlugin
+          - gradle -i --scan               testShardNonHibernate
 
     steps:
       - name: Checkout
