Minor refactor to web-actions after last set of changes
GitOrigin-RevId: d9d291b132a09b659cae0b93b6cf7182f159c868

--- a/misk-admin-web-actions/package.json
+++ b/misk-admin-web-actions/package.json
@@ -7,7 +7,7 @@
     "test": " npx jest src",
     "build": "webpack",
     "start": "webpack serve --mode development",
-    "lint": "npx eslint src && npx prettier src --check",
+    "lint": " tsc --noEmit && npx eslint src && npx prettier src --check",
     "format": "npx prettier src --write",
     "proxy": "cd development-proxy && npm install && npm run dev"
   },
