--- a/misk-admin-web-actions/package.json
+++ b/misk-admin-web-actions/package.json
@@ -7,7 +7,8 @@
     "test": " npx jest src",
     "build": "webpack",
     "start": "webpack serve --mode development",
-    "lint": " tsc --noEmit && npx eslint src && npx prettier src --check",
+    "typecheck": "tsc --noEmit",
+    "lint": "tsc --noEmit && npx eslint src && npx prettier src --check",
     "format": "npx prettier src --write",
     "proxy": "cd development-proxy && npm install && npm run dev"
   },
@@ -22,29 +23,30 @@
     "@eslint/js": "^9.13.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
-    "@types/react-dom": "^18.0.0",
-    "babel-loader": "^9.2.1",
+    "@types/react-dom": "^19.1.0",
+    "babel-loader": "^10.0.0",
     "eslint": "^9.13.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-react": "^7.37.2",
     "file-loader": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
-    "prettier": "3.3.3",
+    "prettier": "3.5.3",
     "ts-jest": "^29.2.5",
-    "ts-loader": "^8.4.0",
+    "ts-loader": "^9.5.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "ace-builds": "^1.36.2",
+    "react": "^19.1.0",
     "react-select": "^5.8.2"
   }
 }
