Misk config gets a few new capabilities.
1. Resource loader paths to load the value from filesystem, classpath,
memory, environment etc. can now be passed in to any primitive types,
without requiring use of the `Secret<T>` class in the config class
definition. This is useful for using environment variables to change
values in a config class provided by Misk or another library where you
can't change the type to `Secret<T>` and the data isn't sensitive or
need to be redacted.

2. Primitive types are now parsed including from resource loader lookups
so numbers and booleans can now resolve from strings into their expected
Kotlin types within the deserialized config class.

GitOrigin-RevId: 07a379b21f9d40ca6d65c0a492283a670c916c5c

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -205,6 +205,7 @@ slf4jApi = { module = "org.slf4j:slf4j-api", version = "2.0.17" }
 sqldelightJdbcDriver = { module = "app.cash.sqldelight:jdbc-driver", version.ref = "sqldelight" }
 sqldelightMysqlDialect = { module = "app.cash.sqldelight:mysql-dialect", version.ref = "sqldelight" }
 sqldelightRuntime = { module = "app.cash.sqldelight:runtime", version.ref = "sqldelight" }
+systemStubsJupiter = { module = "uk.org.webcompere:system-stubs-jupiter", version = "2.1.6" }
 tempest2Testing = { module = "app.cash.tempest:tempest2-testing" }
 tempest2TestingDocker = { module = "app.cash.tempest:tempest2-testing-docker" }
 tempest2TestingInternal = { module = "app.cash.tempest:tempest2-testing-internal" }
