Fix SQL lease implementation compilation and routing issues
Fix SqlLeaseManager.release() compilation error by properly executing
SQL query
Resolve web action routing collision between LeaseAcquireWebAction and
LeaseCheckWebAction
Fix function name mismatch in LeaseAcquireWebAction (renamed check() to
acquire())
Replace MySQL-specific exception handling with generic SQLException for
cross-database compatibility
Update build dependencies to fix project health issues
The SQL lease implementation now provides a robust distributed lease
solution
for the Misk framework with proper error handling and cross-database
compatibility.

GitOrigin-RevId: 1a5de2cc2de192f4303de4c46d151ce3a25dfed5

--- a/samples/exemplar/src/test/resources/exemplar-common.yaml
+++ b/samples/exemplar/src/test/resources/exemplar-common.yaml
@@ -1,6 +1,28 @@
+web:
+  port: 8080
+  idle_timeout: 30000
+  http2: true
+
+prometheus:
+  http_port: 8081
+
+apiKey: "classpath:/secrets/api_key.txt"
+redacted: "super-secret-123"
+audit:
+  url: http://localhost:8081
+
+data_source_clusters:
+  exemplar-001:
+    writer:
+      type: MYSQL
+      username: root
+      password: ""
+      database: exemplar_testing
+      migrations_resource: "classpath:/migrations"
+
 mysql_data_source:
   type: MYSQL
-  database: exemplar
+  database: exemplar_testing
   username: root
   password: ""
   migrations_resource: classpath:/migrations
