--- a/samples/exemplar/src/main/resources/exemplar-common.yaml
+++ b/samples/exemplar/src/main/resources/exemplar-common.yaml
@@ -10,3 +10,12 @@ apiKey: "classpath:/secrets/api_key.txt"
 redacted: "super-secret-123"
 audit:
   url: http://localhost:8081
+
+data_source_clusters:
+  exemplar-001:
+    writer:
+      type: MYSQL
+      username: root
+      password: ""
+      database: exemplar_testing
+      migrations_resource: "classpath:/migrations"
