--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ kotlinBinaryCompatibilityPlugin = "0.18.0"
 mavenPublish = "0.32.0"
 micrometer = "1.12.13"
 netty = "4.2.1.Final"
-okHttp = "5.0.0-alpha.16"
+okHttp = "5.1.0"
 okio = "3.15.0"
 protobuf = "3.25.8"
 retrofit = "3.0.0"
