--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -169,6 +169,7 @@ micrometerCore = { module = "io.micrometer:micrometer-core", version.ref = "micr
 micrometerRegistryPrometheus = { module = "io.micrometer:micrometer-registry-prometheus", version.ref = "micrometer" }
 mockitoCore = { module = "org.mockito:mockito-core", version = "5.18.0" }
 mockitoKotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "5.4.0" }
+mockk = { module = "io.mockk:mockk", version = "1.14.4" }
 moshiAdapters = { module = "com.squareup.moshi:moshi-adapters", version = "1.15.2" }
 moshiCore = { module = "com.squareup.moshi:moshi", version = "1.15.2" }
 moshiKotlin = { module = "com.squareup.moshi:moshi-kotlin", version = "1.15.2" }
