--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -111,8 +111,8 @@ jobs:
 
       - name: Publish the artifacts
         run: |
-          # disable configuration cache because publishing to Maven Central with CC is not supported yet
-          gradle clean publish --stacktrace --no-configuration-cache
+          # disable caching since it breaks publishing to Maven Central
+          gradle clean publish --stacktrace --no-build-cache --no-configuration-cache --no-configure-on-demand
 
       - name: Tag Misk repo
         uses: mathieudutour/github-tag-action@v6.1
