--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ detekt = "1.23.8"
 docker = "3.5.3"
 googleAuth = "1.37.1"
 googleHttp = "1.47.1"
+guava = "33.4.8-jre"
 hoplite = "2.7.5"
 jackson = "2.19.2"
 junit = "5.13.4"
@@ -20,9 +21,11 @@ micrometer = "1.12.13"
 netty = "4.2.1.Final"
 okHttp = "5.1.0"
 okio = "3.15.0"
+prometheus = "0.16.0"
 protobuf = "3.25.8"
 retrofit = "3.0.0"
 sqldelight = "2.1.0"
+tempest = "2025.07.15.155806-c1415e3"
 wire = "5.3.5"
 
 [libraries]
@@ -37,7 +40,7 @@ aws2Bom = { module = "software.amazon.awssdk:bom", version.ref = "aws2" }
 aws2Core = { module = "software.amazon.awssdk:aws-core", version.ref = "aws2" }
 aws2Dynamodb = { module = "software.amazon.awssdk:dynamodb", version.ref = "aws2" }
 aws2DynamodbEnhanced = { module = "software.amazon.awssdk:dynamodb-enhanced", version.ref = "aws2" }
-aws2Regions = { module = "software.amazon.awssdk:regions" }
+aws2Regions = { module = "software.amazon.awssdk:regions", version.ref = "aws2" }
 aws2Sqs = { module = "software.amazon.awssdk:sqs", version.ref = "aws2" }
 awsCore = { module = "com.amazonaws:aws-java-sdk-core", version.ref = "aws1" }
 awsDynamodb = { module = "com.amazonaws:aws-java-sdk-dynamodb", version.ref = "aws1" }
@@ -88,9 +91,9 @@ grpcGenJava = { module = "io.grpc:protoc-gen-grpc-java", version = "1.73.0" }
 grpcNetty = { module = "io.grpc:grpc-netty", version = "1.73.0" }
 grpcProtobuf = { module = "io.grpc:grpc-protobuf", version = "1.73.0" }
 grpcStub = { module = "io.grpc:grpc-stub", version = "1.73.0" }
-guava = { module = "com.google.guava:guava" }
-guavaBom = { module = "com.google.guava:guava-bom", version = "33.4.8-jre" }
-guavaTestLib = { module = "com.google.guava:guava-testlib" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
+guavaBom = { module = "com.google.guava:guava-bom", version.ref = "guava" }
+guavaTestLib = { module = "com.google.guava:guava-testlib", version.ref = "guava" }
 guice = { module = "com.google.inject:guice" }
 guice6 = { module = "com.google.inject:guice", version = "6.0.0" }
 guice7Bom = { module = "com.google.inject:guice-bom", version = "7.0.0" }
@@ -189,11 +192,11 @@ openTracingMock = { module = "io.opentracing:opentracing-mock", version = "0.33.
 openTracingOkHttp = { module = "io.opentracing.contrib:opentracing-okhttp3", version = "3.0.0" }
 openTracingUtil = { module = "io.opentracing:opentracing-util", version = "0.33.0" }
 postgresql = { module = "org.postgresql:postgresql", version = "42.7.7" }
-prometheusClient = { module = "io.prometheus:simpleclient" }
-prometheusClientBom = { module = "io.prometheus:simpleclient_bom", version = "0.16.0" }
-prometheusClientCommon = { module = "io.prometheus:simpleclient_common" }
-prometheusHotspot = { module = "io.prometheus:simpleclient_hotspot" }
-prometheusHttpserver = { module = "io.prometheus:simpleclient_httpserver" }
+prometheusClient = { module = "io.prometheus:simpleclient", version.ref = "prometheus" }
+prometheusClientBom = { module = "io.prometheus:simpleclient_bom", version.ref = "prometheus" }
+prometheusClientCommon = { module = "io.prometheus:simpleclient_common", version.ref = "prometheus" }
+prometheusHotspot = { module = "io.prometheus:simpleclient_hotspot", version.ref = "prometheus" }
+prometheusHttpserver = { module = "io.prometheus:simpleclient_httpserver", version.ref = "prometheus" }
 protobufJava = { module = "com.google.protobuf:protobuf-java", version.ref = "protobuf" }
 protoc = { module = "com.google.protobuf:protoc", version.ref = "protobuf" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
@@ -208,15 +211,15 @@ sqldelightJdbcDriver = { module = "app.cash.sqldelight:jdbc-driver", version.ref
 sqldelightMysqlDialect = { module = "app.cash.sqldelight:mysql-dialect", version.ref = "sqldelight" }
 sqldelightRuntime = { module = "app.cash.sqldelight:runtime", version.ref = "sqldelight" }
 systemStubsJupiter = { module = "uk.org.webcompere:system-stubs-jupiter", version = "2.1.8" }
-tempest2Testing = { module = "app.cash.tempest:tempest2-testing" }
-tempest2TestingDocker = { module = "app.cash.tempest:tempest2-testing-docker" }
-tempest2TestingInternal = { module = "app.cash.tempest:tempest2-testing-internal" }
-tempest2TestingJvm = { module = "app.cash.tempest:tempest2-testing-jvm" }
-tempestBom = { module = "app.cash.tempest:tempest-bom", version = "2025.07.15.155806-c1415e3" }
-tempestTesting = { module = "app.cash.tempest:tempest-testing" }
-tempestTestingDocker = { module = "app.cash.tempest:tempest-testing-docker" }
-tempestTestingInternal = { module = "app.cash.tempest:tempest-testing-internal" }
-tempestTestingJvm = { module = "app.cash.tempest:tempest-testing-jvm" }
+tempest2Testing = { module = "app.cash.tempest:tempest2-testing", version.ref = "tempest" }
+tempest2TestingDocker = { module = "app.cash.tempest:tempest2-testing-docker", version.ref = "tempest" }
+tempest2TestingInternal = { module = "app.cash.tempest:tempest2-testing-internal", version.ref = "tempest" }
+tempest2TestingJvm = { module = "app.cash.tempest:tempest2-testing-jvm", version.ref = "tempest" }
+tempestBom = { module = "app.cash.tempest:tempest-bom", version.ref = "tempest" }
+tempestTesting = { module = "app.cash.tempest:tempest-testing", version.ref = "tempest" }
+tempestTestingDocker = { module = "app.cash.tempest:tempest-testing-docker", version.ref = "tempest" }
+tempestTestingInternal = { module = "app.cash.tempest:tempest-testing-internal", version.ref = "tempest" }
+tempestTestingJvm = { module = "app.cash.tempest:tempest-testing-jvm", version.ref = "tempest" }
 threeTenBp = { module = "org.threeten:threetenbp", version = "1.7.1" }
 tink = { module = "com.google.crypto.tink:tink", version = "1.12.0" }
 tinkAwskms = { module = "com.google.crypto.tink:tink-awskms", version = "1.9.1" }
