Avoid some footguns when using the schema-migrator gradle plugin in misk itself
GitOrigin-RevId: 71f6b0671282fad3cf4798c22932624b824343ad

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -244,6 +244,10 @@ kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "mavenPublish" }
 mavenPublishBase = { id = "com.vanniktech.maven.publish.base", version.ref = "mavenPublish" }
 protobuf = { id = "com.google.protobuf", version = "0.9.5" }
-schemaMigrator = { id = "com.squareup.misk.schema-migrator", version = "2025.07.31.213947-514912f" }
+# Use a strict version here so we don't get into an infinite loop of version updates. This version can be bumped
+# periodically whenever there are nontrivial changes to the schema-migrator plugin behaviour. Having this here is
+# not great but it allows us to use the schema-migrator gradle plugin (which is published from this codebase)
+# within the codebase itself without resorting to complex buildSrc/includeBuild trickery.
+schemaMigrator = { id = "com.squareup.misk.schema-migrator", version = { strictly = "2025.07.31.213947-514912f" } }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 wire = { id = "com.squareup.wire", version.ref = "wire" }
