--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -182,6 +182,7 @@ nettyBom = { module = "io.netty:netty-bom", version.ref = "netty" }
 nettyHandler = { module = "io.netty:netty-handler", version.ref = "netty" }
 okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
 okHttpMockWebServer = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okHttp" }
+okHttpSse = { module = "com.squareup.okhttp3:okhttp-sse", version.ref = "okHttp" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 okioFakefilesystem = { module = "com.squareup.okio:okio-fakefilesystem", version.ref = "okio" }
 openTracing = { module = "io.opentracing:opentracing-api", version = "0.33.0" }
