## Summary New `misk-aws2-s3` module providing AWS SDK 2.x S3 integration for Misk applications with comprehensive testing infrastructure.
## Key Features
- **AWS SDK 2.x Integration**: Both sync (`S3Client`) and async
(`S3AsyncClient`) support
- **Flexible Configuration**: Support for region, endpoint override, and
path-style configuration
- **Enhanced Testing Infrastructure**: Production-ready test modules
with automatic cleanup
- **LocalStack Support**: Built-in testing infrastructure with Docker
containers

## Files Added

### Core Module
- `misk-aws2-s3/src/main/kotlin/misk/aws2/s3/`
- `S3Module.kt` - Guice module for dependency injection with
configurable client builders
- `config/S3Config.kt` - Configuration data class supporting region,
endpoint override, and path style

### Testing Infrastructure (testFixtures)
- `misk-aws2-s3/src/testFixtures/kotlin/misk/aws2/s3/`
- **`S3TestModule.kt`** - Ready-to-use test module with LocalStack
configuration
- **`DockerS3.kt`** - test container with automatic bucket management

### Tests & Documentation
- Unit tests (`S3ModuleTest.kt`)
- Integration tests (`S3IntegrationTest.kt`)

GitOrigin-RevId: 2316fa036e6ac01c9a25a568c5546ac80eb47781

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,6 +41,7 @@ aws2Core = { module = "software.amazon.awssdk:aws-core", version.ref = "aws2" }
 aws2Dynamodb = { module = "software.amazon.awssdk:dynamodb", version.ref = "aws2" }
 aws2DynamodbEnhanced = { module = "software.amazon.awssdk:dynamodb-enhanced", version.ref = "aws2" }
 aws2Regions = { module = "software.amazon.awssdk:regions", version.ref = "aws2" }
+aws2S3 = { module = "software.amazon.awssdk:s3", version.ref = "aws2" }
 aws2Sqs = { module = "software.amazon.awssdk:sqs", version.ref = "aws2" }
 awsCore = { module = "com.amazonaws:aws-java-sdk-core", version.ref = "aws1" }
 awsDynamodb = { module = "com.amazonaws:aws-java-sdk-dynamodb", version.ref = "aws1" }
